Update lorem II

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -13,5 +13,6 @@
      reprehenderit ipsa est laboriosam harum esse? Dolor aspernatur quo veritatis reiciendis laborum 
      ipsum quas, aliquid totam obcaecati impedit!  
    </p>
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora neque voluptate aperiam. Totam error deserunt nesciunt repellat minima quisquam ab ullam voluptas, aperiam, dolorum cupiditate fuga ut aliquam exercitationem iste!</p>
 </body>
 </html>
